--- a/src/main/webapp/css/components/modal.css
+++ b/src/main/webapp/css/components/modal.css
@@ -3,6 +3,20 @@
  * @author: Stanley Sathler <stanleysathlerpinto@gmail.com>
  **/
 
+.vr-modal .modal-dialog { 
+	border-radius: 3px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+
+	max-height: 90%; 
+	overflow-y: auto; 
+}
+
+.vr-modal .modal-content .modal-header,
+.vr-modal .modal-content .modal-footer { 
+	border-radius: 0; 
+}
+
 .vr-modal .modal-header .title { text-align: center; }
 
 .vr-modal .modal-header .title * {
